<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Laba6BMCSales">

    <LinearLayout
        android:layout_width="392dp"
        android:layout_height="775dp"
        android:background="#F4F4F4"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topLinearLayout">

        <TextView
            android:id="@+id/TextAuthorization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:text="@string/Authorization"
            android:textAlignment="center"
            android:textSize="16dp" />

        <LinearLayout
            android:id="@+id/CenterLinearLayout2"
            android:layout_width="376dp"
            android:layout_height="275dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/authorization"
            android:backgroundTint="#FFFFFF"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Login"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/LoginBlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="username"
                android:textColor="@color/gray" />

            <LinearLayout
                android:layout_width="348dp"
                android:layout_height="51dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:text="@string/Password"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="204dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="3"
                    android:text="@string/ForgetPass"
                    android:textAlignment="textEnd"
                    android:textColor="#4E6475"
                    android:textStyle="bold" />
            </LinearLayout>

            <EditText
                android:id="@+id/PasswordBlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Пароль"
                android:textColor="@color/gray" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#6298C1"
                android:text="@string/Enter" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/BottomLinearLayout2"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/authorization"
            android:backgroundTint="#FFFFFF"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="335dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/NotAccYet"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btnReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:text="@string/Reg"
                android:textColor="#2D5270"
                android:visibility="visible" />
        </LinearLayout>

        <TextView
            android:id="@+id/MessageBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/topLinearLayout"
        android:layout_width="394dp"
        android:layout_height="54dp"
        android:background="#161D32"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/headerTitle"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="32dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>